# app/api/user.api.go
@@ -22,7 +22,7 @@ var UserApiSet = wire.NewSet(wire.Struct(new(UserApi), "*"))
 //	@Param		user_name	query		string				false	"用户名"
 //	@Param		status		query		int					false	"用户状态(1，正常; 2，失效)"
 //	@Param		query_value query		string				false	"模糊查询"
-//	@Success	200			{object}	schema.ListResult	"用户列表"
+//	@Success	200			{object}	schema.SuccessResult "用户列表"
 //	@Failure	400			{object}	schema.ErrorResult	"错误信息"
 //	@Router		/api/v1/user [get]
 func (u *UserApi) Query(c *gin.Context) {
