# cmd/gin-api/docs/swagger.json
@@ -51,7 +51,7 @@
                     "200": {
                         "description": "用户列表",
                         "schema": {
-                            "$ref": "#/definitions/schema.ListResult"
+                            "$ref": "#/definitions/schema.SuccessResult"
                         }
                     },
                     "400": {
@@ -65,29 +65,28 @@
         }
     },
     "definitions": {
-        "schema.ErrorItem": {
+        "schema.ErrorResult": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
+                "error": {},
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "schema.ErrorResult": {
+        "schema.SuccessResult": {
             "type": "object",
             "properties": {
-                "error": {
-                    "$ref": "#/definitions/schema.ErrorItem"
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
                 }
-            }
-        },
-        "schema.ListResult": {
-            "type": "object",
-            "properties": {
-                "list": {}
             }
         }
     }
